--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "export-to-csv": "^0.2.1",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
