--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -15,8 +14,6 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
     "export-to-csv": "^0.2.1",
     "moment": "^2.29.4",
     "next": "13.4.19",
@@ -31,5 +28,8 @@
     "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.8"
   }
 }
